# 11Otusjoinserver_peredelka

./: CMakeLists.txt  README.md  test_main.cpp  правила красивого кода))).odt
.github/workflows/: c-cpp.yml
